PickContainerCode added in palleting grid view + minor fixes

--- a/WMS/Views/Theme/Default/SalesOrders/_Consignments.cshtml
+++ b/WMS/Views/Theme/Default/SalesOrders/_Consignments.cshtml
@@ -46,6 +46,13 @@
 
         settings.Columns.Add(c =>
         {
+            c.FieldName = "PickContainerCode";
+            c.Caption = "Pick Container Code";
+            c.Settings.AutoFilterCondition = AutoFilterCondition.Contains;
+        });
+
+        settings.Columns.Add(c =>
+        {
             c.FieldName = "DeliveryNO";
             c.Settings.AutoFilterCondition = AutoFilterCondition.Contains;
         });
